[project]
name = "jaala"
version = "0.1.0"
description = "A Python package for machine learning and deep learning models, implemented from scratch."
authors = [
    {name = "Manish Vasu",email = "manishvasubiz@gmail.com"}
]
license = {text = "LICENSE"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
